Fixed java command